--- a/src/main/resources/templates/management/dashboard.html
+++ b/src/main/resources/templates/management/dashboard.html
@@ -132,12 +132,7 @@
                             <p>笔记博客从v1版本以来（虽然v3才算点样子，v4才正式和大家见面）就打算做一套易上手同时也简介美观的一款博客系统，
                                 也可作为一套让初学者学习接触的一套系统。笔记博客在易用的同时功能也在不断完善，目前基本上常用功能都能做到。</p>
                             <p>笔记博客更新频率一般是1年1个大版本，在年中不定期有小版本（可能不会公布只是作者自己用 ￣ω￣=），
-                                但是大版本的更新一定会加上，版本的迭代中还需要各位多多提供建议和意见，我们的交流QQ群：
-                                <a href="https://jq.qq.com/?_wv=1027&amp;k=5FgsNj3" title="697053454"
-                                   target="_blank">697053454</a></p>
-                            <p class="pull-right layui-inline" style="margin-bottom: 10px;">—— 笔记博客大当家（<a
-                                    href="https://wuwenbin.me/"
-                                    target="_blank">wuwenbin.me</a>）</p>
+                                但是大版本的更新一定会加上，版本的迭代中还需要各位多多提供建议和意见，我们的交流QQ群：851152471
                         </div>
                     </div>
 
@@ -177,7 +172,7 @@
                         <tr>
                             <td>最新版本</td>
                             <td>
-                                <a href="https://jq.qq.com/?_wv=1027&k=5ZEGGl8" target="_blank">立即获取（群：697053454）</a>
+                                <a href="https://jq.qq.com/?_wv=1027&k=5ZEGGl8" target="_blank">立即获取（群：851152471）</a>
                             </td>
                         </tr>
                         </tbody>
