--- a/src/main/resources/templates/reg.html
+++ b/src/main/resources/templates/reg.html
@@ -74,13 +74,13 @@
 </div>
 <div class="layui-trans layadmin-user-login-footer footer-login" style="z-index: -100;">
 
-    <p><i class="fa fa-graduation-cap"></i> 2019 <a href="https://github.com/miyakowork/noteblogv5" target="_blank">笔记博客&copy;
+    <p><i class="fa fa-graduation-cap"></i> 2019 <a href="https://github.com/Maybe728/noteblog" target="_blank">笔记博客&copy;
         <span style="font-style: italic;">v5</span></a></p>
     <p>
-        <span><a href="//wuwenbin.me" target="_blank">作者博客</a></span>
-        <span><a href="https://github.com/miyakowork/noteblogv5" target="_blank">获取源码</a></span>
+        <span><a href="" target="_blank">作者博客</a></span>
+        <span><a href="https://github.com/Maybe728/noteblog" target="_blank">获取源码</a></span>
         <span><a target="_blank"
-                 href="//shang.qq.com/wpa/qunwpa?idkey=40c11d21b7369a629d987dbe15410bc69e65a17abb2b7f9f1e591b2490bf5621">加入QQ群</a></span>
+                 href="">加入QQ群851152471</a></span>
     </p>
 </div>
 
