--- a/src/main/resources/templates/error/page.html
+++ b/src/main/resources/templates/error/page.html
@@ -18,8 +18,7 @@
     <div class="layadmin-tips" style="text-align: center;">
         <i class="layui-icon layui-icon-face-surprised" style="font-size: 10rem;"></i>
         <div class="layui-text" style="font-size: 20px;margin-bottom: 2rem;">
-            好像出错了呢，<a target="_blank"
-                      href="//shang.qq.com/wpa/qunwpa?idkey=3782d0f3115c78efaa5dcf912566e2ac556f67a8014e0b68559ad10596654b51">点我反馈错误</a>
+            好像出错了呢，加入qq群 851152471 反馈错误</a>
         </div>
         <p style="margin: 20px;"><a href="/" style="color: #1E9FFF;">点我</a>返回首页</p>
         <div class="layui-container">
