--- a/src/main/resources/templates/frontend/ubs/comment.html
+++ b/src/main/resources/templates/frontend/ubs/comment.html
@@ -119,8 +119,7 @@
     <div class="layui-row layui-col-space30" style="padding-top: 20px;">
         <div class="layui-col-md4 copyright">
             <p style="text-align: center;">
-                <i class="fa fa-copyright"></i>&nbsp;[[${settings.footer_words}]] powered by
-                <a href="//wuwenbin.me" target="_blank" style="color: #1E9FFF;">NoteBlog</a> in 2019 v5.
+                <i class="fa fa-copyright"></i>&nbsp;[[${settings.footer_words}]] powered by  NoteBlog in 2019 v5.
             </p>
         </div>
         <div class="layui-col-md4 cates">
@@ -171,14 +170,11 @@
                     <p style="padding-bottom: 5px;" th:utext="${settings.info_label_text}"></p>
                     <p style="border-top: 1px solid #f5f5f5;padding-top: 5px;padding-bottom: 5px;">
                         交流讨论：<i class="fa fa-qq"></i>
-                        <a target="_blank"
-                           href="//shang.qq.com/wpa/qunwpa?idkey=7bd7c01acf4e6124bfaab5a6d10504b917d5292f029b66887d00006a16a00930">
-                            697053454
-                        </a>。
+                        <a target="_blank"href="">851152471</a>。
                     </p>
                     <p style="border-top:1px solid #F5F5F5;padding-top: 5px;">
                         项目源码：<i class="fa fa-github-alt"></i>
-                        <a target="_blank" href="https://github.com/miyakowork/noteblogv5">miyakowork/noteblogv5</a>。
+                        <a target="_blank" href="https://github.com/Maybe728/noteblog">noteblog</a>。
                     </p>
                 </div>
             </li>
@@ -186,8 +182,7 @@
                 <i class="layui-icon layui-timeline-axis">&#xe63f;</i>
                 <div class="layui-timeline-content layui-text">
                     <h3 class="layui-timeline-title" style="font-size: 16px;">作者 </h3>
-                    <p>联系作者：<i class="fa fa-envelope"></i> <a href="#">wuwenbinwork#163.com</a></p>
-                    <p>作者网站：<i class="fa fa-link"></i> <a href="https://wuwenbin.me">https://wuwenbin.me</a></p>
+                    <p>联系作者（微信）：<i class="fa fa-envelope"></i> <a href="#">javaer888888</a></p>
                 </div>
             </li>
         </ul>
