--- a/src/main/resources/templates/frontend/article.html
+++ b/src/main/resources/templates/frontend/article.html
@@ -142,7 +142,7 @@
                     <p style="padding-bottom: 5px;" th:utext="${settings.info_label_text}"></p>
                     <p style="border-top: 1px solid #f5f5f5;padding-top: 5px;padding-bottom: 5px;">
                         交流讨论：<i class="fa fa-qq"></i>
-                        <a target="_blank"href="">851152471</a>。
+                        <a target="_blank"href="">微信公众号：【ToBeTopJavaer】</a>。
                     </p>
                     <p style="border-top:1px solid #F5F5F5;padding-top: 5px;">
                         项目源码：<i class="fa fa-github-alt"></i>
