--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -78,10 +78,8 @@
     <p><i class="fa fa-graduation-cap"></i> 2019 <a href="https://github.com/Maybe728/noteblog" target="_blank">笔记博客&copy;
         <span style="font-style: italic;">v5</span></a></p>
     <p>
-        <span><a href="" target="_blank">作者博客</a></span>
-        <span><a href="https://github.com/Maybe728/noteblog" target="_blank">获取源码</a></span>
-        <span><a target="_blank"
-                 href="">加入QQ群851152471</a></span>
+        <span>扫码关注公众号回复【<b style="color: red">进群</b>】，进入微信交流群</span>
+        <img style="width: 8%;margin-left: 1%;" src="/static/assets/img/gzh.jpg">
     </p>
 </div>
 
