--- a/src/main/resources/templates/management/dashboard.html
+++ b/src/main/resources/templates/management/dashboard.html
@@ -34,7 +34,7 @@
                                         </a>
                                     </li>
                                     <li class="layui-col-xs4">
-                                        <a href="https://wuwenbin.me" target="_blank">
+                                        <a href="" target="_blank">
                                             <i class="layui-icon layui-icon-transfer"></i>
                                             <cite>作者博客</cite>
                                         </a>
@@ -132,7 +132,7 @@
                             <p>笔记博客从v1版本以来（虽然v3才算点样子，v4才正式和大家见面）就打算做一套易上手同时也简介美观的一款博客系统，
                                 也可作为一套让初学者学习接触的一套系统。笔记博客在易用的同时功能也在不断完善，目前基本上常用功能都能做到。</p>
                             <p>笔记博客更新频率一般是1年1个大版本，在年中不定期有小版本（可能不会公布只是作者自己用 ￣ω￣=），
-                                但是大版本的更新一定会加上，版本的迭代中还需要各位多多提供建议和意见，我们的交流QQ群：851152471
+                                但是大版本的更新一定会加上，版本的迭代中还需要各位多多提供建议和意见，我们的交流微信公众号：【ToBeTopJavaer】
                         </div>
                     </div>
 
@@ -142,7 +142,7 @@
         </div>
 
         <div class="layui-col-md4">
-            <div class="layui-card" style="height: 247px;">
+            <div class="layui-card" style="height: 100%;">
                 <div class="layui-card-header">版本信息</div>
                 <div class="layui-card-body layui-text">
                     <table class="layui-table">
@@ -155,8 +155,6 @@
                             <td>当前版本</td>
                             <td>
                                 v<span th:text="${nbv5version}"></span>
-                                <a href="https://wuwenbin.me/noteblogv5_updates" target="_blank"
-                                   style="padding-left: 15px;">更新日志</a>
                             </td>
                         </tr>
                         <tr>
@@ -172,7 +170,8 @@
                         <tr>
                             <td>最新版本</td>
                             <td>
-                                <a href="https://jq.qq.com/?_wv=1027&k=5ZEGGl8" target="_blank">立即获取（群：851152471）</a>
+                                微信扫码关注回复【博客】获取
+                                <img src="/static/assets/img/gzh.jpg">
                             </td>
                         </tr>
                         </tbody>
