--- a/src/main/resources/templates/reg.html
+++ b/src/main/resources/templates/reg.html
@@ -79,8 +79,7 @@
     <p>
         <span><a href="" target="_blank">作者博客</a></span>
         <span><a href="https://github.com/Maybe728/noteblog" target="_blank">获取源码</a></span>
-        <span><a target="_blank"
-                 href="">加入QQ群851152471</a></span>
+        <span>扫码关注公众号回复【进群】，进入微信交流群<img src="/static/assets/img/gzh.jpg"></span>
     </p>
 </div>
 
